--- a/Portfolio_website/index.html
+++ b/Portfolio_website/index.html
@@ -50,7 +50,7 @@
                     <button type = "button" class = "btn fw-bold text-white mt-4 btn-header">Explore now!</button>
                 </div>
                 <div class = "col-lg-6 Laptop img d-none d-lg-flex justify-content-end gx-0 mt-5">
-                    <img src = "/Website-images/Laptop.jpg">
+                    <img src = "/BGIT-images/Laptop.jpg">
                 </div>
             </div>
         </div>
@@ -88,12 +88,12 @@
         <div class="continer my-4">
             <div class="row gx-lg-5">
             <div class="col-lg-5 mb-5">
-                <img src="/Website-images/Testimonials.jpg" class="img-fluid">
+                <img src="/BGIT-images/Testimonials.jpg" class="img-fluid">
 
             </div>
             <div class="col-lg-6">
                 <h3> Client testimonials! </h3>
-                <p class="text-muted fw-light lh-lg my-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam amet, facere reiciendis iusto cum obcaecati eius nulla impedit quo maxime esse nesciunt modi tenetur illo non architecto iste doloremque ut.</p>
+                <p class="text-muted fw-light lh-lg my-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam amet, facere reiciendis iusto cum obcaecati eius nulla impedit quo maxime esse nesciunt modi tenetur illo non architecto iste doloremque ut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe repellendus dolor eaque iusto accusantium! Magni consequuntur eveniet, recusandae veritatis voluptates veniam reprehenderit quas blanditiis, exercitationem, quam autem quidem facilis ad.</p>
                 <button type="button" class="btn btn-green mt-2">Read more</button>
             </div>
         </div>
@@ -114,7 +114,7 @@
 <div class = "row gx-md-5">
 <div class = "col-md-6 my-3">
 <div class = "card text-center">
-    <img class = "card-img-top" src = "/Website-images/Website.jpg">
+    <img class = "card-img-top" src = "/BGIT-images/Website.jpg">
     <div class = "card-body py-5">
         <h4 class = "card-title">Portfolio</h4>
         <p class = "card-text py-3 lh-lg text-muted fw-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis libero reprehenderit, enim iure debitis doloremque nulla perspiciatis natus impedit obcaecati molestias sunt voluptate sed ipsa?</p>
@@ -125,7 +125,7 @@
 
 <div class = "col-md-6 my-3">
 <div class = "card text-center">
-    <img class = "card-img-top" src = "/Website-images/Money.jpg">
+    <img class = "card-img-top" src = "/BGIT-images/Money.jpg">
     <div class = "card-body py-5">
         <h4 class = "card-title">Pricing/Packages</h4>
         <p class = "card-text py-3 lh-lg text-muted fw-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis libero reprehenderit, enim iure debitis doloremque nulla perspiciatis natus impedit obcaecati molestias sunt voluptate sed ipsa?</p>
