--- a/Final_Portfolio/Index.html
+++ b/Final_Portfolio/Index.html
@@ -97,7 +97,8 @@
             </div>
             </div>
         </div>
-        <img src="/BGIT-images/down-arrow.png" alt="Arrow icon" class="icon arrow" onClick="location.href='./Skills'"/>
+        <img src="/BGIT-images/down-arrow.png" alt="Arrow icon" class="icon arrow" onClick="location.href='./#Skills'"/>
+        
     </section>
     <section id="skills">
         <p class="section__text__p1"> Explore My</p>
@@ -151,7 +152,7 @@
                 </div>
             </div>
         </div>
-        <img src="/BGIT-images/down-arrow.png" alt="Arrow icon" class="icon arrow" onClick="location.href='./projects'"/>
+        <img src="/BGIT-images/down-arrow.png" alt="Arrow icon" class="icon arrow" onClick="location.href='./#projects'"/>
     </section>
     <section id="projects">
         <p class="section__text__p1">Browse My Recent</p>
@@ -233,7 +234,8 @@
               </div>
     </div>
     </div>
-    <img src="/BGIT-images/down-arrow.png" alt="Arrow icon" class="icon arrow" onClick="location.href='./projects'"/>
+    <img src="/BGIT-images/down-arrow.png" alt="Arrow icon" class="icon arrow" onClick="location.href='./#contact'"/>
+  
     </section>
     <section id="contact">
         <p class ="section__text__p1">Get in Touch</p>
