--- a/HN_portfolio/Contact.html
+++ b/HN_portfolio/Contact.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/55fc184e65.js" crossorigin="anonymous"></script>
     <title>HN Personal Blog</title>
+<!--Box icon-->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <nav class="navbar">
+    <!--Navigation bar-->
+        <nav class="navbar">
         <div class="navbar__container">
-        <a href="/" id="navbar__logo"><i class='fas fa fa-heart'></i> HN BLOG</a>
+        <a href="index.html" id="navbar__logo"><i class="fas fa fa-heart"></i>EMPWRD</a>
         <div class="navbar__toggle" id="mobile-menu">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -24,80 +28,76 @@
         <a href="index.html" class="navbar__links">Home</a>
     </li>
     <li class="navbar__item">
-        <a href="tech.html" class="navbar__links">Tech</a>
-    <li class="navbar__item">
         <a href="About.html" class="navbar__links">About</a>
+    <li class="navbar__item">
+        <a href="Blogs.html" class="navbar__links">Blogs</a>
     <li class="navbar__btn">
-        <a href="/" class="button"> Contact</a>
+        <a href="Contact.html" class="button"> Contact</a>
         </li>
     </li>
     </li>
     </ul>
     </div>
     </nav>
+    <!--Box icon-->
+    <header>
+        <div class="nav-container">
+            <a href="#" class="logo"></a>
+            <a href="#" class="logo"></a>
+        </div>
+    </header>
 
-    <!--Hero Section-->
-    <div class="main"></div>
-    <div class="main__container">
-     <div class="main__content">
-        <h1>This is the CONTACT page</h1>
-        <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <button class="main__btn">
-            <a href="/">Get in touch</a>
-        </button>
+    <section class="home" id="home">
+        <div class="home-text-container">
+            <h2 class="home-title">EMPWRD</h2>
+            <span class="home-subtitle">For Your Health & Wellbeing, Personal Growth and Lifestyle</span>
         </div>
-        <div class="main__img--container">
-            <img src="/BGIT-images/Completion.svg" alt="pic" id="main__img">
+    </section>
+
+    <section class="about container" id="about">
+        <div class="contentBx">
+            <h2 class="titleText">Sign up to our mailing list </h2>
+            <p class="title-text"> By signing up to our mailing list, you'll get the latest updates straight to your inbox, including special offers, free gifts and events!</p>
+            <br>
+            <form action="info@empwrd.com">
+    <label for="fname">First name:</label><br>
+    <input type="text" id="fname" name="fname" value=""><br>
+    <label for="lname">Last name:</label><br>
+    <input type="text" id="lname" name="lname" value=""><br><br>
+    <input type="submit" value="Submit">
+    </form>
+
         </div>
-     </div> 
+        <div class="imgBx">
+            <img src="/BGIT-images/empowered_mug.jpg"/>
+        </div>
+    </section>
+
+    <!--Footer section-->
+<footer>
+    <div class="footer-container">
+        <div class="sec aboutus">
+            <h2>About EMPWRD</h2>
+            <p> For women, by women. Here to help you feel EMPWRD in your every day. We want to support you to be your best through our health & wellbeing, personal development and lifestyle updates - we've got you covered.
+                </p>
+            <ul class="sci">
+                <li><a href="#"><i class="bx bxl-facebook"></i></a></li>
+                <li><a href="#"><i class="bx bxl-instagram"></i></a></li>
+                <li><a href="#"><i class="bx bxl-twitter"></i></a></li>
+                <li><a href="#"><i class="bx bxl-linkedin"></i></a></li>
+            </ul>
+        </div>
+        <div class="sec contactBx">
+            <h2>Contact Info</h2>
+            <ul class="info">
+                <li>
+                    <span><i class='bx bx-envelope' ></i></span>
+                    <p><a href="mailto:info@empwrd.com">Info@empwrd.com</a></p>
+                </li>
+            </ul>
+        </div>
     </div>
-
-    <!--Services Section-->
-    <div class="services">
-        <h1> See what the hype is about </h1>
-        <div class="services_container">
-           <div class="services__card">
-            <h2> Experience bliss</h2>
-            <p> AI Powered Technology </p>
-            <button> Get Started</button>
-           </div>
-           <div class="services__card">
-            <h2> Are you ready?</h2>
-            <p> Take the leap</p>
-            <button> Get Started</button>
-              </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Footer Section -->
-    <div class="footer__container">
-        <div class="footer__links">
-            <div class="footer__link--wrapper">
-                <div class="footer__link--items">
-        </div>
-        <div class="social__media">
-        <div class="social__media--wrap">
-            <div class="footer__logo">
-                <a href="/" id="footer__logo"><i class="fas fa fa-heart"></i>HN BLOG</a>
-            </div>
-            <p class="website__rights"> HN BLOG 2023. All rights reserved</p>
-            <div class="social__icons">
-                <a href="/" class="social__icon--link" target="_blank">
-                    <i class="fab fa-facebook"></i>
-                </a>
-                <a href="/" class="social__icon--link" target="_blank">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="/" class="social__icon--link" target="_blank">
-                    <i class="fab fa-twitter"></i>
-                </a>
-            </div>
-        </div>
-
-        </div>
-        
-    </div>
+</footer>
 
     <script src="script.js"></script>
 </body>
