--- a/Recipe_card/index.html
+++ b/Recipe_card/index.html
@@ -38,7 +38,7 @@
             <li>Step 1 - Add 1 tbsp of olive oil to frying pan and put it on a low heat</li>
             <li>Step 2 - Chop 1 onion and add it to the frying pan, saute the onions for 1-2 mins</li>
             <li>Step 3 - In a separate pan, add water and put it on a high heat for it to boil</li>
-            <li>Step 4 - Add the mince meat to the fryinh pan, and put the heat on medium</li>
+            <li>Step 4 - Add the mince meat to the frying pan, and put the heat on medium</li>
           </ol>
         </div>
       </div>
